--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
         <div class="content">
             <h1 class="title has-text-weight-bold">Consistency is Key</h1>
-            <h5 class="subtitle">Elements on a web page should be related and follow the same theme</h5>
+            <h5 class="subtitle has-text-grey has-text-weight-bold">Elements on a web page should be related and follow the same theme</h5>
             <p>
 	    	For the sake of readability and user experience you should try to keep you styling similar throughout the page.
 	    </p>
@@ -80,7 +80,7 @@
 	    </p>
         </div>
         <hr>
-        <div class="notification is_danger">
+        <div class="notification is-danger">
             <p><span class="has-text-weight-bold">Warning! </span>Even with a framework you can still make mistakes!</p>
         </div>
     </div>
